--- a/src/progress-bar/ProgressBar.css
+++ b/src/progress-bar/ProgressBar.css
@@ -26,3 +26,37 @@
 .control:hover {
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
+
+.info-panel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    padding: 1%;
+    margin: 4px;
+}
+
+.info {
+    text-shadow:  0px 5px 8px rgba(0, 0, 0, 0.35);
+}
+
+.input-panel {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    font-weight: bold;
+    padding: 2%;
+    width: fit-content;
+}
+
+
+
+.month-labels {
+    display: flex;
+    cursor: pointer;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    font-size: 0.875rem;
+}
