--- a/src/progress-bar/ProgressBar.css
+++ b/src/progress-bar/ProgressBar.css
@@ -57,6 +57,6 @@
     cursor: pointer;
     justify-content: space-between;
     margin-top: 10px;
-    margin-bottom: 15px;
+    margin-bottom: 5%;
     font-size: 0.875rem;
 }
