--- a/src/progress-bar/ProgressBar.css
+++ b/src/progress-bar/ProgressBar.css
@@ -1,12 +1,17 @@
+.progress-bar-container {
+    position: 'relative';
+    cursor: pointer;
+}
+
 .progress-bar {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 6pxvh;
+    height: 6px;
     border-radius: 8px;
 }
 
-.progress-bar:hover {
+.progress-bar-container:hover > .progress-bar{
     
     transition: .1s;
     transition-timing-function: ease-in-out;
@@ -15,6 +20,11 @@
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
+
+
+
+
+
 
 .control-panel {
     display: flex;
